# dotfiles

./: .Xresources  .gtkrc-2.0  .tmux.conf  .vimrc  .xinitrc  .zprofile  .zshenv  .zshrc
.config/: gf2_config.ini
.config/alacritty/: alacritty.toml  alacritty.yml
.config/bat/themes/: custom.tmTheme
.config/btop/: btop.conf
.config/btop/themes/: catppuccin_latte.theme
.config/dunst/: dunstrc
.config/firefox/: flags.md  userChrome.css
.config/flameshot/: flameshot.ini
.config/foot/: foot.ini
.config/fuzzel/: fuzzel.ini
.config/git/: .gitconfig  config  ignore
.config/glow/: glow.yml
.config/gtk-3.0/: settings.ini
.config/hypr/: hyprland.conf  hyprpaper.conf  import-gsettings.sh  switch.sh
.config/lsd/: colors.yaml
.config/nvim/: init.lua  lazy-lock.json  nvim-pack-lock.json
.config/opencode/: opencode.json
.config/picom/: picom.conf
.config/ripgrep/: rc
.config/rofi/: config.rasi
.config/sway/: config  lid-reload.sh
.config/waybar/: config  style.css
.config/wofi/: colors  config  style.css
.config/xmobar/: bluetooth.sh  trayer-padding-icon.sh  trayer-padding.sh  volume.sh  wifi.sh  xmobar.hs  xmobarrc
.config/xmonad/: build  xmonad-config.cabal  xmonad.hs
.config/xmonad/pacman-hooks/: recompile-xmonadh.hook
.pi/agent/: settings.json
.vim/colors/: light.vim
Scripts/: githelpers.sh  open-jetbrains-project.sh  run.sh  screenshot.sh  search_man_pages.sh  tmux-change-session.sh  tmux-create-session.sh  tmux-create-sessions.sh  tmux-interactiu.sh  utils.sh
VirtualMachines/Windows11/: install.sh  run.sh
(+153 files in other folders)
